# MapJj_using_OSM

./: CMakeLists.txt  OSMWay.cpp  OSMWay.h  README.md  Widget.cpp  Widget.h  main.cpp
